@@ -41,5 +41,4 @@ PQXX_HAVE_SYS_SELECT_H	internal	compiler
 PQXX_SEEKDIRS_MATCH_C	internal	compiler
 PQXX_PQ_IN_NAMESPACE	public	compiler
 PQXX_SELECT_ACCEPTS_NULL	internal	compiler
-PQXX_STRERROR_R_INT	internal	compiler
 VERSION	internal	autotools
